--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ description =
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
+    HIDE_PARFIVE_PROGESS = True
     PYTEST_COMMAND = pytest -vvv -s -ra --pyargs radiospectra --cov-report=xml --cov=radiospectra --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
@@ -77,7 +78,7 @@ commands =
     pre-commit run --verbose --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
-[testenv:conda]
+[testenv:py39-conda]
 pypi_filter =
 basepython = python3.9
 extras =
