--- a/setup.cfg
+++ b/setup.cfg
@@ -40,21 +40,20 @@ install_requires =
   matplotlib
   scipy
   cdflib>=0.3.20
-  sunpy-soar
 
 [options.packages.find]
 exclude = radiospectra._dev
 
 [options.extras_require]
 tests =
-  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
-  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
-  tox
+  pytest-astropy
+  pytest-doctestplus
+  sunpy-soar
 docs =
   sphinx-automodapi
   sphinx-changelog
-  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
-  sphinx>=3
+  sphinx-gallery
+  sphinx
   sunpy-sphinx-theme
 
 [options.package_data]
