--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,14 @@
 [tox]
+minversion = 4.0.0
 envlist =
-    py{38,39,310,311}{,-oldestdeps,-devdeps,-online,-rc,-conda}
+    py{39,310,311}{,-oldestdeps,-devdeps,-online}
     build_docs
     codestyle
 requires =
-    setuptools >=56, !=61.0.0
-    pip >= 19.3.1
-    tox-pypi-filter >= 0.12
-isolated_build = true
+    tox-pypi-filter
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
-# Run the tests in a temporary directory to make sure that we don't import
-# sunpy from the source tree
 changedir = .tmp/{envname}
 description =
     run tests
@@ -26,23 +22,17 @@ setenv =
     PYTEST_COMMAND = pytest -vvv -s -ra --pyargs radiospectra --cov-report=xml --cov=radiospectra --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
-passenv =
-    HTTP_PROXY
-    HTTPS_PROXY
-    NO_PROXY
-    CIRCLECI
 deps =
-    setuptools
-    pytest-xdist
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: matplotlib
     devdeps: scipy
     oldestdeps: sunpy<4.1
     online: pytest-rerunfailures
     online: pytest-timeout
-    rc: sunpy>=0.0.dev0
+    pytest-xdist
 extras =
-    dev
+    all
+    tests
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any {posargs}
@@ -51,7 +41,8 @@ commands =
 changedir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras =
-    dev
+    all
+    docs
 commands =
     sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
@@ -65,21 +56,3 @@ deps =
 commands =
     pre-commit install-hooks
     pre-commit run --verbose --all-files --show-diff-on-failure
-
-# This env requires tox-conda.
-[testenv:conda]
-pypi_filter =
-extras =
-deps =
-conda_deps =
-    pytest
-    pytest-astropy
-    pytest-cov
-    pytest-mock
-    pytest-xdist
-    sunpy
-conda_channels = conda-forge
-install_command = pip install --no-deps {opts} {packages}
-commands =
-    conda list
-    {env:PYTEST_COMMAND} {posargs}
