--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,6 @@ classifiers =
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
@@ -29,13 +28,13 @@ classifiers =
 
 [options]
 zip_safe = False
-python_requires = >=3.8
+python_requires = >=3.9
 packages = find:
 include_package_data = True
 setup_requires =
   setuptools_scm
 install_requires =
-  sunpy[net]>=4.0.0
+  sunpy[net]>=5.0.0
   numpy
   matplotlib
   scipy
@@ -46,15 +45,16 @@ exclude = radiospectra._dev
 
 [options.extras_require]
 tests =
-  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
-  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
-  tox
+  pytest-astropy >= 0.8
+  pytest-doctestplus >= 0.5
 docs =
   sphinx-automodapi
   sphinx-changelog
-  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
-  sphinx>=3
+  sphinx-gallery>=0.7.0
+  sphinx
   sunpy-sphinx-theme
+  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
+  importlib-resources<6
 
 [options.package_data]
 radiospectra = data/*
@@ -86,6 +86,8 @@ filterwarnings =
     ignore:numpy.ndarray size changed:RuntimeWarning
     # Zeep
     ignore:'cgi' is deprecated:DeprecationWarning
+    # https://github.com/pytest-dev/pytest-cov/issues/557
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 100
