--- a/setup.cfg
+++ b/setup.cfg
@@ -45,12 +45,13 @@ exclude = radiospectra._dev
 
 [options.extras_require]
 tests =
-  pytest-astropy >= 0.8
-  pytest-doctestplus >= 0.5
+  pytest-astropy
+  pytest-doctestplus
+  sunpy-soar
 docs =
   sphinx-automodapi
   sphinx-changelog
-  sphinx-gallery>=0.7.0
+  sphinx-gallery
   sphinx
   sunpy-sphinx-theme
   # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
@@ -86,6 +87,7 @@ filterwarnings =
     ignore:numpy.ndarray size changed:RuntimeWarning
     # Zeep
     ignore:'cgi' is deprecated:DeprecationWarning
+    # Issue with pytest-cov injecting --rsync arg https://github.com/pytest-dev/pytest-xdist/issues/825
     # https://github.com/pytest-dev/pytest-cov/issues/557
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
