--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ description =
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    HIDE_PARFIVE_PROGESS = True
+    PARFIVE_HIDE_PROGRESS = True
     PYTEST_COMMAND = pytest -vvv -s -ra --pyargs radiospectra --cov-report=xml --cov=radiospectra --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
