--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 4.0.0
 envlist =
-    py{39,310,311}{,-oldestdeps,-devdeps,-online}
+    py{310,311,312}{,-oldestdeps,-devdeps,-online}
     build_docs
     codestyle
 requires =
@@ -22,14 +22,14 @@ setenv =
     PYTEST_COMMAND = pytest -vvv -s -ra --pyargs radiospectra --cov-report=xml --cov=radiospectra --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
+    devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
 deps =
     devdeps: git+https://github.com/sunpy/sunpy
-    devdeps: matplotlib
-    devdeps: scipy
-    oldestdeps: sunpy<4.1
+    devdeps: matplotlib>=0.0.dev0
+    devdeps: scipy>=0.0.dev0
+    oldestdeps: sunpy<5.1
     online: pytest-rerunfailures
     online: pytest-timeout
-    pytest-xdist
 extras =
     all
     tests
