--- a/tox.ini
+++ b/tox.ini
@@ -36,8 +36,7 @@ set_env =
     devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
 deps =
     # For packages which publish nightly wheels this will pull the latest nightly
-    devdeps: numpy>=0.0.dev0
-    devdeps: git+https://github.com/sunpy/sunpy
+    devdeps: sunpy>=0.0.dev0
     devdeps: matplotlib>=0.0.dev0
     devdeps: scipy>=0.0.dev0
     # Packages without nightly wheels will be built from source like this
