--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ authors = [
   { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
 ]
 dependencies = [
-  "sunpy[net]>=6.0.0",
-  "numpy>1.24",
-  "matplotlib>=3.7",
-  "scipy>=1.10",
+  "sunpy[net]>=7.0.0",
+  "numpy>=1.26.0",
+  "matplotlib>=3.8",
+  "scipy>=1.11",
   "cdflib>=0.3.20"
 ]
 dynamic = ["version"]
