--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,10 +60,11 @@ jobs:
       toxdeps: tox-pypi-filter
       posargs: -n auto
       envs: |
-        - windows: py311
+        - linux: py314
+        - windows: py312
         - macos: py312
-        - linux: py310-oldestdeps
-        - linux: py313-devdeps
+        - linux: py312-oldestdeps
+        - linux: py314-devdeps
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
