--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,17 +9,17 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "radiospectra"
 description = "Provide support for some type of radio spectra in solar physics."
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 readme = { file = "README.rst", content-type = "text/x-rst" }
 license = { file = "licenses/LICENSE.rst" }
 authors = [
   { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
 ]
 dependencies = [
-  "sunpy[net]>=6.0.0",
-  "numpy>1.24",
-  "matplotlib>=3.7",
-  "scipy>=1.10",
+  "sunpy[net]>=7.0.0",
+  "numpy>=1.26.0",
+  "matplotlib>=3.8.0",
+  "scipy>=1.12.0",
   "cdflib>=0.3.20"
 ]
 dynamic = ["version"]
