Fix CI py312-oldestdeps: Ignore pyparsing PyparsingDeprecationWarning from old matplotlib

--- a/pytest.ini
+++ b/pytest.ini
@@ -41,3 +41,5 @@ filterwarnings =
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
     ignore:File may have been truncated.*
     ignore:pattern has been replaced with the format keyword
+    # pyparsing deprecation warning from old matplotlib in oldestdeps
+    ignore:.*deprecated:pyparsing.warnings.PyparsingDeprecationWarning
